--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,6 @@
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your-secret-here
+JWT_SECRET=your-secret-here
 BSC_URL="https://data-seed-prebsc-1-s1.binance.org:8545/"
 BSC_CHAIN_ID=97
 BSC_NETWORK_ID=97
