--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next-http-backend": "^1.4.0",
     "moralis": "^1.5.8",
     "next": "12.1.0",
+    "next-auth": "^4.9.0",
     "next-i18next": "^10.5.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
