--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest",
     "lint": "next lint",
     "prepare": "simple-git-hooks",
     "storybook": "start-storybook -p 6006",
@@ -29,6 +30,7 @@
     "react-dom": "17.0.2",
     "react-moralis": "^1.3.5",
     "react-redux": "^7.2.6",
+    "react-textarea-autosize": "^8.3.4",
     "redux-devtools-extension": "^2.13.9",
     "reselect": "^4.1.5",
     "stream-browserify": "^3.0.0",
