--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,13 @@
 {
-  "singleQuote": true,  
-	"parser": "flow",
-	"useTabs": true,
+  "singleQuote": true,
+	"printWidth": 80,
+	"editor.formatOnSave": true,
+	"proseWrap": "always",
 	"tabWidth": 2,
-	"endOfLine": "auto",
-  "trailingComma": "all"
+	"requireConfig": false,
+	"useTabs": false,
+	"trailingComma": "none",
+	"bracketSpacing": true,
+	"jsxBracketSameLine": false,
+	"semi": true
 }
