Finetuning and Added code for Submit Job Form and related functions.

--- a/.env.development
+++ b/.env.development
@@ -13,3 +13,6 @@ RADA_AUCTION_HOUSE_CONTRACT_ADDRESS="0x0443D9B41E2da87b6bC1e7454Ae7F391Dc395A2C"
 # Moralis
 NEXT_PUBLIC_SERVER_URL="https://oaw2pod4wcwt.usemoralis.com:2053/server"
 NEXT_PUBLIC_APP_ID="EGHV8bBEM0XUxqIaVG8R4XGkBr8ai0EQHNwNNKCn"
+
+#GraphQl
+GRAPHQL_ENDPOINT_URL="https://gql.rada.works"
