--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "react": "17.0.2",
     "react-aria": "~3.4.0",
     "react-dom": "17.0.2",
+    "react-feather": "^2.0.10",
     "react-intl": "~5.20.0",
     "react-moralis": "^1.3.5",
     "react-redux": "^7.2.6",
+    "react-rte": "^0.16.5",
     "react-textarea-autosize": "^8.3.4",
     "redux-devtools-extension": "^2.13.9",
     "reselect": "^4.1.5",
