Finetuning and add functions for Toasts message - System messages.

--- a/.env.production
+++ b/.env.production
@@ -12,5 +12,5 @@ NEXT_PUBLIC_SERVER_URL="https://oaw2pod4wcwt.usemoralis.com:2053/server"
 NEXT_PUBLIC_APP_ID="EGHV8bBEM0XUxqIaVG8R4XGkBr8ai0EQHNwNNKCn"
 
 #GraphQl - Directus endpoint
-GRAPHQL_ENDPOINT_URL="https://graphql.rada.works"
-GRAPHQL_ENDPOINT_API_TOKEN="h7Naed0WPDBwL7KBQMYV4TPV5UnzY2Oo"
+GRAPHQL_ENDPOINT_URL="https://dev.dhunt.io/graphql"
+GRAPHQL_ENDPOINT_API_TOKEN="k0X4MmOwlUhzwpl7BEL9BW7BjNbXc6cG"
