--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "process": "^0.11.10",
     "react": "17.0.2",
     "react-aria": "~3.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-intl": "~5.20.0",
     "react-moralis": "^1.3.5",
