--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "12.1.0",
     "next-auth": "^4.9.0",
     "next-i18next": "^10.5.0",
+    "next-themes": "^0.2.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "react": "17.0.2",
