--- a/package.json
+++ b/package.json
@@ -58,6 +58,10 @@
     "@storybook/manager-webpack5": "^6.4.19",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.4",
     "@types/date-fns": "^2.6.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.41",
