--- a/.env.production
+++ b/.env.production
@@ -14,3 +14,5 @@ NEXT_PUBLIC_APP_ID="EGHV8bBEM0XUxqIaVG8R4XGkBr8ai0EQHNwNNKCn"
 #GraphQl - Directus endpoint
 GRAPHQL_ENDPOINT_URL="https://dev.dhunt.io/graphql"
 GRAPHQL_ENDPOINT_API_TOKEN="k0X4MmOwlUhzwpl7BEL9BW7BjNbXc6cG"
+
+PUBLIC_URL='/'
