--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
 # local env files
 .env.local
 .env.development.local
@@ -35,4 +34,4 @@ yarn-error.log*
 /.idea/*
 
 /public/tinymce/
-
+yarn.lock
