--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@tinymce/tinymce-react": "^4.1.0",
+    "@reach/tabs": "^0.17.0",
     "@walletconnect/web3-provider": "^1.7.7",
     "bignumber.js": "^9.0.2",
     "buffer": "^6.0.3",
@@ -42,6 +43,7 @@
     "react-toastify": "^9.0.7",
     "redux-devtools-extension": "^2.13.9",
     "reselect": "^4.1.5",
+    "slugify": "^1.6.5",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tinymce": "^6.1.1",
