Finetuning for validation input data in form. And added configuration for support multiple languages with next-i18next.

--- a/.env.production
+++ b/.env.production
@@ -15,4 +15,4 @@ NEXT_PUBLIC_APP_ID="EGHV8bBEM0XUxqIaVG8R4XGkBr8ai0EQHNwNNKCn"
 GRAPHQL_ENDPOINT_URL="https://dev.dhunt.io/graphql"
 GRAPHQL_ENDPOINT_API_TOKEN="k0X4MmOwlUhzwpl7BEL9BW7BjNbXc6cG"
 
-PUBLIC_URL='/'
+PUBLIC_URL=''
