--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
+PUBLIC_URL="http://localhost:3000"
+
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=your-secret-here
 JWT_SECRET=your-secret-here
@@ -18,6 +20,8 @@ NEXT_PUBLIC_APP_ID="EGHV8bBEM0XUxqIaVG8R4XGkBr8ai0EQHNwNNKCn"
 GRAPHQL_ENDPOINT_URL="https://dev.dhunt.io/graphql"
 GRAPHQL_ENDPOINT_API_TOKEN="k0X4MmOwlUhzwpl7BEL9BW7BjNbXc6cG"
 
-PUBLIC_URL=''
+GRAPHQL_ENDPOINT_SYSTEM_URL="https://dev.dhunt.io//graphql/system"
+GRAPHQL_ENDPOINT_API_TOKEN="12321312"
+DIRECTUS_DEFAULT_ROLE="6eae3bd4-12312321312-4854-907e-7b61af4c4bf8"
 
 
