Fintuning and sync with access_token from logined user.

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 PUBLIC_URL="http://localhost:3000"
 
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-secret-here
+NEXT_AUTH_URL=http://localhost:3000
+NEXT_AUTH_SECRET=your-secret-here
 JWT_SECRET=your-secret-here
 BSC_URL="https://data-seed-prebsc-1-s1.binance.org:8545/"
 BSC_CHAIN_ID=97
@@ -18,10 +18,11 @@ NEXT_PUBLIC_APP_ID="EGHV8bBEM0XUxqIaVG8R4XGkBr8ai0EQHNwNNKCn"
 
 #GraphQl - Directus endpoint
 GRAPHQL_ENDPOINT_URL="https://dev.dhunt.io/graphql"
-GRAPHQL_ENDPOINT_API_TOKEN="k0X4MmOwlUhzwpl7BEL9BW7BjNbXc6cG"
+#GRAPHQL_ENDPOINT_API_TOKEN="k0X4MmOwlUhzwpl7BEL9BW7BjNbXc6cG"
 
 GRAPHQL_ENDPOINT_SYSTEM_URL="https://dev.dhunt.io//graphql/system"
-GRAPHQL_ENDPOINT_API_TOKEN="12321312"
+GRAPHQL_ENDPOINT_SYSTEM_API_TOKEN="12321312"
 DIRECTUS_DEFAULT_ROLE="6eae3bd4-12312321312-4854-907e-7b61af4c4bf8"
+DIRECTUS_SUPER_ADMIN_PASSWORD="create-password-123"
 
 
