Finetuning for Guest mode.

--- a/.env.development
+++ b/.env.development
@@ -18,7 +18,7 @@ NEXT_PUBLIC_APP_ID="EGHV8bBEM0XUxqIaVG8R4XGkBr8ai0EQHNwNNKCn"
 
 #GraphQl - Directus endpoint
 GRAPHQL_ENDPOINT_URL="https://dev.dhunt.io/graphql"
-#GRAPHQL_ENDPOINT_API_TOKEN="k0X4MmOwlUhzwpl7BEL9BW7BjNbXc6cG"
+GRAPHQL_ENDPOINT_GUEST_API_TOKEN="AOaJQbkJE6ulbo-f7zxrMQteJq4pgPZ_"
 
 GRAPHQL_ENDPOINT_SYSTEM_URL="https://dev.dhunt.io//graphql/system"
 GRAPHQL_ENDPOINT_SYSTEM_API_TOKEN="12321312"
