--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "17.0.2",
     "react-aria": "~3.4.0",
     "react-dom": "17.0.2",
+    "react-feather": "^2.0.10",
     "react-moralis": "^1.3.5",
     "react-redux": "^7.2.6",
     "react-textarea-autosize": "^8.3.4",
