--- a/.eslintignore
+++ b/.eslintignore
@@ -7,6 +7,7 @@ jest.storyshots.config.js
 src/generated/graphql.tsx
 stories
 tailwind.config.js
-postinstall.js
 server.js
 src/utils/simplePersistence.js
+build-tinymce.js
+tus-server.js
