--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prepare": "simple-git-hooks",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "postinstall": "node ./postinstall.js"
+    "build-tinymce": "node ./build-tinymce.js",
+    "run-tus": "node ./tus-server.js"
   },
   "dependencies": {
     "@reach/tabs": "^0.17.0",
@@ -49,6 +50,7 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tinymce": "^6.1.1",
+    "tus-node-server": "^0.7.1",
     "url": "^0.11.0",
     "web3": "^1.7.1",
     "web3modal": "^1.9.5"
