--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,9 @@
-PUBLIC_URL="http://localhost:3000"
+PUBLIC_URL="http://127.0.0.1:3000"
 
-NEXT_AUTH_URL=http://localhost:3000
+NEXT_AUTH_URL=http://127.0.0.1:3000
 NEXT_AUTH_SECRET=your-secret-here
 JWT_SECRET=your-secret-here
+
 BSC_URL="https://data-seed-prebsc-1-s1.binance.org:8545/"
 BSC_CHAIN_ID=97
 BSC_NETWORK_ID=97
@@ -18,9 +19,9 @@ NEXT_PUBLIC_APP_ID="EGHV8bBEM0XUxqIaVG8R4XGkBr8ai0EQHNwNNKCn"
 
 #GraphQl - Directus endpoint
 GRAPHQL_ENDPOINT_URL="https://dev.dhunt.io/graphql"
-
 GRAPHQL_ENDPOINT_SYSTEM_URL="https://dev.dhunt.io//graphql/system"
-GRAPHQL_ENDPOINT_SYSTEM_API_TOKEN="12321312"
+GRAPHQL_ENDPOINT_SYSTEM_API_TOKEN="ZLy5Z_i0gZ4YpSPSWKPXr7q3tLFF_thI"
+
 DIRECTUS_DEFAULT_ROLE="6eae3bd4-12312321312-4854-907e-7b61af4c4bf8"
 DIRECTUS_SUPER_ADMIN_PASSWORD="create-password-123"
 
