Fine-tuning to sync uploaded files with directus files system.

--- a/.env.development
+++ b/.env.development
@@ -19,7 +19,7 @@ NEXT_PUBLIC_APP_ID="EGHV8bBEM0XUxqIaVG8R4XGkBr8ai0EQHNwNNKCn"
 
 #GraphQl - Directus endpoint
 GRAPHQL_ENDPOINT_URL="https://dev.dhunt.io/graphql"
-GRAPHQL_ENDPOINT_SYSTEM_URL="https://dev.dhunt.io//graphql/system"
+GRAPHQL_ENDPOINT_SYSTEM_URL="https://dev.dhunt.io/graphql/system"
 GRAPHQL_ENDPOINT_SYSTEM_API_TOKEN="ZLy5Z_i0gZ4YpSPSWKPXr7q3tLFF_thI"
 
 DIRECTUS_DEFAULT_ROLE="6eae3bd4-12312321312-4854-907e-7b61af4c4bf8"
