--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "bignumber.js": "^9.0.2",
     "buffer": "^6.0.3",
     "date-fns": "^2.28.0",
+    "ethers": "^5.7.0",
     "fs-extra": "^10.1.0",
     "graphql": "^16.3.0",
     "https-browserify": "^1.0.0",
     "i18next-http-backend": "^1.4.0",
     "informed": "~3.29.0",
     "moment": "^2.29.4",
-    "moralis": "^1.5.8",
     "next": "12.1.0",
     "next-auth": "^4.9.0",
     "next-i18next": "^10.5.0",
@@ -41,7 +41,6 @@
     "react-aria": "~3.4.0",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.10",
-    "react-moralis": "^1.3.5",
     "react-redux": "^7.2.6",
     "react-textarea-autosize": "^8.3.4",
     "react-toastify": "^9.0.7",
