--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "process": "^0.11.10",
     "react": "17.0.2",
     "react-aria": "~3.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.10",
     "react-redux": "^7.2.6",
+    "react-select": "^5.4.0",
     "react-textarea-autosize": "^8.3.4",
     "react-toastify": "^9.0.7",
     "redux-devtools-extension": "^2.13.9",
