--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "run-tus": "node ./tus-server.js"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.5.0",
     "@reach/tabs": "^0.17.0",
     "@tinymce/tinymce-react": "^4.1.0",
     "@uppy/core": "^2.3.2",
     "@uppy/react": "^2.2.2",
     "@uppy/tus": "^2.4.2",
     "@walletconnect/web3-provider": "^1.7.7",
+    "@web3auth/web3auth": "^1.2.0",
     "bignumber.js": "^9.0.2",
     "buffer": "^6.0.3",
     "date-fns": "^2.28.0",
