update login with google auth

--- a/.env.development
+++ b/.env.development
@@ -25,4 +25,6 @@ GRAPHQL_ENDPOINT_SYSTEM_API_TOKEN="ZLy5Z_i0gZ4YpSPSWKPXr7q3tLFF_thI"
 DIRECTUS_DEFAULT_ROLE="6eae3bd4-12312321312-4854-907e-7b61af4c4bf8"
 DIRECTUS_SUPER_ADMIN_PASSWORD="create-password-123"
 
-
+# social API login
+GOOGLE_ID=353504884757-9fact3b8v0mpk5urdrdvaodr95p4malr.apps.googleusercontent.com
+GOOGLE_SECRET=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
