--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 # local env files
+.env.*
 .env.local
+.env.development
 .env.development.local
 .env.test.local
 .env.production.local
