--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "i18next-http-backend": "^1.4.0",
     "informed": "~3.29.0",
     "moment": "^2.29.4",
+    "moralis": "^2.2.0",
     "next": "12.1.0",
     "next-auth": "^4.9.0",
     "next-i18next": "^10.5.0",
