--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.10",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.6",
     "react-select": "^5.4.0",
     "react-textarea-autosize": "^8.3.4",
