added  APP_INFURA_ID for testing

--- a/.env.production
+++ b/.env.production
@@ -9,6 +9,8 @@ BSC_CHAIN_ID=97
 BSC_NETWORK_ID=97
 BSC_EXPLORER_URL="https://testnet.bscscan.com"
 
+APP_INFURA_ID=e235447999794e278bf4a75bd8921e23
+
 # Contracts
 RADA_TOKEN_CONTRACT_ADDRESS="0xF9C65fE88036276825740A796846fE6120c0f973"
 RADA_AUCTION_HOUSE_CONTRACT_ADDRESS="0x0443D9B41E2da87b6bC1e7454Ae7F391Dc395A2C"
