--- a/.env.production
+++ b/.env.production
@@ -23,7 +23,7 @@ GRAPHQL_ENDPOINT_URL="https://dev.dhunt.io/graphql"
 GRAPHQL_ENDPOINT_SYSTEM_URL="https://dev.dhunt.io/graphql/system"
 GRAPHQL_ENDPOINT_SYSTEM_API_TOKEN="ZLy5Z_i0gZ4YpSPSWKPXr7q3tLFF_thI"
 
-DIRECTUS_DEFAULT_ROLE="6eae3bd4-12312321312-4854-907e-7b61af4c4bf8"
+DIRECTUS_DEFAULT_ROLE="6eae3bd4-2080-4854-907e-7b61af4c4bf8"
 DIRECTUS_SUPER_ADMIN_PASSWORD="create-password-123"
 
 # Social API login
