--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "moment": "^2.29.4",
     "moralis": "^2.2.0",
     "next": "12.1.0",
-    "next-auth": "^4.9.0",
+    "next-auth": "^4.12.0",
     "next-i18next": "^10.5.0",
     "next-themes": "^0.2.0",
     "os-browserify": "^0.3.0",
@@ -58,6 +58,7 @@
     "stream-http": "^3.2.0",
     "tinymce": "^6.1.1",
     "tus-node-server": "^0.7.1",
+    "twitter-lite": "^1.1.0",
     "url": "^0.11.0",
     "web3": "^1.7.1",
     "web3modal": "^1.9.5"
