--- a/.env.production
+++ b/.env.production
@@ -29,3 +29,6 @@ DIRECTUS_SUPER_ADMIN_PASSWORD="create-password-123"
 # Social API login
 GOOGLE_ID=353504884757-e2umehpl91df4q3gkuh412nt2l0arhk0.apps.googleusercontent.com
 GOOGLE_SECRET=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
+
+TWITTER_CONSUMER_KEY=u7itXw6GmAaj5f3DgNzAbyO5Z
+TWITTER_CONSUMER_SECRET=35xyOEGhdoPeE00HN1WEJxwFRydhIrAiOA79ZQ6wo8JoDclxAS
