--- a/.env.development
+++ b/.env.development
@@ -24,8 +24,8 @@ GRAPHQL_ENDPOINT_URL="https://dev.dhunt.io/graphql"
 GRAPHQL_ENDPOINT_SYSTEM_URL="https://dev.dhunt.io/graphql/system"
 GRAPHQL_ENDPOINT_SYSTEM_API_TOKEN="ZLy5Z_i0gZ4YpSPSWKPXr7q3tLFF_thI"
 
-DIRECTUS_DEFAULT_ROLE="6eae3bd4-2080-4854-907e-7b61af4c4bf8"
-DIRECTUS_SUPER_ADMIN_PASSWORD="create-password-123"
+SM_USER_ROLE_ID="6eae3bd4-2080-4854-907e-7b61af4c4bf8"
+SM_USER_PASSWORD="create-password-123"
 
 # social API login
 GOOGLE_ID=353504884757-9fact3b8v0mpk5urdrdvaodr95p4malr.apps.googleusercontent.com
