Tuning Twitter Consumer Keys.

--- a/.env.production
+++ b/.env.production
@@ -31,8 +31,10 @@ SM_USER_PASSWORD="create-password-123"
 GOOGLE_ID="353504884757-e2umehpl91df4q3gkuh412nt2l0arhk0.apps.googleusercontent.com"
 GOOGLE_SECRET="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"
 
-TWITTER_CONSUMER_KEY="MEr0mT7HzeLUdEfkchFqFBkIN"
-TWITTER_CONSUMER_SECRET="uYfLPmJdzd98fAF74UDB7dgiRBRUIZg0E0uBZi7XlLCKjJ8Zb8"
+#TWITTER_CONSUMER_KEY="MEr0mT7HzeLUdEfkchFqFBkIN"
+#TWITTER_CONSUMER_SECRET="uYfLPmJdzd98fAF74UDB7dgiRBRUIZg0E0uBZi7XlLCKjJ8Zb8"
+TWITTER_CONSUMER_KEY=u7itXw6GmAaj5f3DgNzAbyO5Z
+TWITTER_CONSUMER_SECRET=35xyOEGhdoPeE00HN1WEJxwFRydhIrAiOA79ZQ6wo8JoDclxAS
 
 # assets/media
 MEDIA_BASE_URL ="https://dev.dhunt.io/assets"
