--- a/.eslintignore
+++ b/.eslintignore
@@ -11,3 +11,20 @@ server.js
 src/utils/simplePersistence.js
 build-tinymce.js
 tus-server.js
+src/pages/_offline.js
+src/pages/_document.js
+#Some files dev but have not using yet
+src/components/organisms/Campaign/Subcribe/subcribe.js
+src/components/organisms/Campaign/Subcribe/index.js
+src/components/organisms/Campaign/Related/related.js
+src/components/organisms/Campaign/Related/index.js
+src/components/organisms/Campaign/Overview/overview.js
+src/components/organisms/Campaign/Overview/index.js
+src/components/atoms/Select/select.js
+src/components/atoms/Select/option.js
+src/components/atoms/Select/index.js
+src/components/atoms/Checkbox/index.js
+src/components/atoms/Checkbox/checkbox.js
+src/components/organisms/Campaign/Related/item.js
+
+
