--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "NODE_ENV=development node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "test": "jest",
@@ -25,6 +25,7 @@
     "@web3auth/web3auth": "^1.2.0",
     "bignumber.js": "^9.0.2",
     "buffer": "^6.0.3",
+    "critters": "^0.0.16",
     "date-fns": "^2.28.0",
     "ethers": "^5.7.0",
     "fs-extra": "^10.1.0",
@@ -37,6 +38,7 @@
     "next": "12.1.0",
     "next-auth": "^4.12.0",
     "next-i18next": "^10.5.0",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
