Supported to adding Page Title on each page.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ yarn-error.log*
 /public/tinymce/
 yarn.lock
 public/uploads/*
+public/sw.js
+public/workbox-946f13af.js
+public/fallback-AF3w1AarOTkFSQWkmy2-g.js
