--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@walletconnect/web3-provider": "^1.7.7",
     "@web3auth/web3auth": "^1.2.0",
     "bignumber.js": "^9.0.2",
+    "boring-avatars": "^1.7.0",
     "buffer": "^6.0.3",
     "critters": "^0.0.16",
     "date-fns": "^2.28.0",
