--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 PUBLIC_URL="https://dev.soulmint.net"
-NEXTAUTH_URL="https://dev.soulmint.net/"
+NEXTAUTH_URL="https://dev.soulmint.net"
 MEDIA_BASE_URL ="https://dev.dhunt.io/assets"
 
 BSC_URL="https://data-seed-prebsc-1-s1.binance.org:8545/"
