--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "next-i18next": "^10.5.0",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.0",
+    "nextjs-progressbar": "^0.0.14",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "react": "17.0.2",
     "react-aria": "~3.4.0",
-    "react-cookie": "^4.1.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.10",
