--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@coinbase/wallet-sdk": "^3.5.0",
     "@reach/tabs": "^0.17.0",
     "@tinymce/tinymce-react": "^4.1.0",
+    "@types/js-cookie": "^3.0.2",
     "@uppy/core": "^2.3.2",
     "@uppy/react": "^2.2.2",
     "@uppy/tus": "^2.4.2",
@@ -33,10 +34,12 @@
     "https-browserify": "^1.0.0",
     "i18next-http-backend": "^1.4.0",
     "informed": "~3.29.0",
+    "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "moralis": "^2.2.0",
     "next": "12.1.0",
     "next-auth": "^4.12.0",
+    "next-cookies": "^2.0.3",
     "next-i18next": "^10.5.0",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.0",
