--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
-PUBLIC_URL="http://127.0.0.1:3000"
-NEXTAUTH_URL="http://127.0.0.1:3000"
-MEDIA_BASE_URL ="https://dev.dhunt.io/assets"
+#PUBLIC_URL="http://127.0.0.1:3000"
+#NEXTAUTH_URL="http://127.0.0.1:3000"
+#MEDIA_BASE_URL ="https://dev.dhunt.io/assets"
 
 BSC_URL="https://data-seed-prebsc-1-s1.binance.org:8545/"
 BSC_CHAIN_ID=97
