--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
-PUBLIC_URL="https://dev.soulmint.net"
-NEXTAUTH_URL="https://dev.soulmint.net"
-MEDIA_BASE_URL ="https://dev.dhunt.io/assets"
+#PUBLIC_URL="https://dev.soulmint.net"
+#NEXTAUTH_URL="https://dev.soulmint.net"
+#MEDIA_BASE_URL ="https://dev.dhunt.io/assets"
 
 BSC_URL="https://data-seed-prebsc-1-s1.binance.org:8545/"
 BSC_CHAIN_ID=97
